# armature

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_STATUS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  main-CNP557Y6.js  styles-CHX336J4.css
.cargo/: audit.toml
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md
armature-acme/: Cargo.toml  README.md
armature-admin/: Cargo.toml
armature-analytics/: Cargo.toml
armature-angular/: Cargo.toml
armature-angular/src/: config.rs  error.rs  lib.rs  renderer.rs  static_files.rs
armature-angular/tests/: integration_test.rs
armature-audit/: Cargo.toml  README.md
armature-audit/src/: backend.rs  event.rs  lib.rs  logger.rs  masking.rs  middleware.rs  retention.rs
armature-audit/tests/: integration_tests.rs
armature-auth/: Cargo.toml  README.md
armature-auth/src/: api_key.rs  error.rs  guard.rs  lib.rs  oauth2.rs  password.rs  passwordless.rs  saml.rs  strategy.rs  two_factor.rs  user.rs
armature-auth/src/providers/: auth0.rs  aws_cognito.rs  discord.rs  github.rs  gitlab.rs  google.rs  linkedin.rs  microsoft.rs  mod.rs  okta.rs
armature-auth/tests/: integration_test.rs
armature-aws/: Cargo.toml  README.md
armature-azure/: Cargo.toml  README.md
armature-azure-functions/: Cargo.toml  README.md
armature-cache/: Cargo.toml  README.md
armature-cache/src/: config.rs  error.rs  helpers.rs  invalidation.rs  lib.rs  manager.rs  memcached_cache.rs  parallel.rs  redis_cache.rs  tiered.rs  traits.rs
armature-cache/tests/: integration_test.rs
armature-cli/: Cargo.toml  README.md
armature-cli/src/: error.rs  main.rs  templates.rs  watcher.rs
armature-cli/src/commands/: build.rs  config.rs  dev.rs  generate.rs  info.rs  mock.rs  mod.rs  new.rs  openapi.rs  repl.rs  routes.rs
armature-cli/src/generators/: mod.rs  utils.rs
armature-cloudrun/: README.md  (+1 more)
armature-compression/: Cargo.toml  README.md
armature-compression/src/: algorithm.rs  config.rs  error.rs  lib.rs  middleware.rs  streaming.rs
armature-config/: Cargo.toml  README.md
armature-config/src/: config_service.rs  env.rs  error.rs  lib.rs  loader.rs  validation.rs
armature-config/tests/: integration_test.rs
armature-core/: Cargo.toml  README.md
armature-core/src/: application.rs  arena.rs  batch.rs  body.rs  body_limits.rs  body_parser.rs  buffer_pool.rs  cache_local.rs  conditional.rs  connection.rs  connection_manager.rs  connection_tuning.rs  container.rs  content_negotiation.rs  cow_state.rs  epoll_tuning.rs  error.rs  error_correlation.rs  error_transform.rs  exception_filter.rs  extensions.rs  extractors.rs  fast_response.rs  form.rs  guard.rs  handler.rs  headers.rs  health.rs  hmr.rs  http.rs  http2.rs  http3.rs  interceptor.rs  io_uring.rs  json.rs  lib.rs  lifecycle.rs  load_balancer.rs  logging.rs  memory_opt.rs  (+37 more)
armature-core/src/resilience/: bulkhead.rs  circuit_breaker.rs  fallback.rs  mod.rs  retry.rs  timeout.rs
armature-core/tests/: container_tests.rs  di_tests.rs  integration_test.rs  route_constraints_tests.rs  route_groups_tests.rs  routing_tests.rs
armature-cqrs/: Cargo.toml  README.md
armature-cqrs/src/: command.rs  lib.rs  projection.rs  query.rs
armature-cron/: Cargo.toml  README.md
armature-cron/src/: error.rs  expression.rs  job.rs  lib.rs  scheduler.rs
armature-cron/tests/: integration_test.rs
armature-csrf/: Cargo.toml
armature-csrf/src/: config.rs  error.rs  lib.rs  middleware.rs  token.rs
armature-csrf/tests/: integration_test.rs
armature-diesel/: Cargo.toml  README.md
armature-diesel/src/: config.rs  error.rs  lib.rs  pool.rs  transaction.rs
armature-discovery/: Cargo.toml  README.md
armature-discovery/src/: consul.rs  etcd.rs  lib.rs  memory.rs  service.rs
armature-distributed/: Cargo.toml  README.md
armature-distributed/src/: leader.rs  lib.rs  lock.rs
armature-events/: Cargo.toml  README.md
armature-events/src/: bus.rs  event.rs  lib.rs
armature-eventsourcing/: Cargo.toml  README.md
armature-eventsourcing/src/: aggregate.rs  lib.rs  repository.rs  store.rs
armature-features/: Cargo.toml  README.md
armature-features/src/: flag.rs  lib.rs
armature-ferron/: Cargo.toml  README.md
armature-ferron/src/: config.rs  error.rs  health.rs  lib.rs  manager.rs  process.rs  registry.rs
armature-graphql/: Cargo.toml  README.md
armature-graphql/src/: config.rs  decorators.rs  federation.rs  lib.rs  resolver.rs  schema_builder.rs  schema_docs.rs
armature-graphql/tests/: integration_test.rs
armature-handlebars/: Cargo.toml
armature-handlebars/src/: config.rs  engine.rs  error.rs  helpers.rs  lib.rs
armature-jwt/: Cargo.toml  README.md
armature-jwt/src/: claims.rs  config.rs  error.rs  lib.rs  service.rs  token.rs
armature-jwt/tests/: integration_test.rs
armature-log/: Cargo.toml  README.md
armature-log/src/: lib.rs
armature-macros/: Cargo.toml  README.md
armature-macros-utils/: Cargo.toml  README.md
armature-macros-utils/src/: error_helpers.rs  lib.rs  model.rs  response.rs  test_helpers.rs  validation.rs
armature-macros/src/: lib.rs  prelude.rs
armature-messaging/: Cargo.toml  README.md
armature-messaging/src/: aws.rs  broker.rs  config.rs  error.rs  kafka.rs  lib.rs  message.rs  mq_bridge.rs  nats.rs  rabbitmq.rs  traits.rs
armature-metrics/: Cargo.toml  README.md
armature-metrics/src/: counter.rs  endpoint.rs  gauge.rs  histogram.rs  lib.rs  middleware.rs  registry.rs  summary.rs
armature-metrics/tests/: integration_tests.rs
armature-openapi/: Cargo.toml  README.md
armature-openapi/src/: builder.rs  lib.rs  playground.rs  spec.rs  swagger.rs
armature-openapi/tests/: integration_test.rs
armature-opentelemetry/: Cargo.toml  README.md
armature-opentelemetry/src/: builder.rs  config.rs  error.rs  lib.rs  metrics.rs  middleware.rs  tracing_setup.rs
armature-queue/: Cargo.toml  README.md
armature-queue/src/: error.rs  job.rs  lib.rs  queue.rs  worker.rs
armature-queue/tests/: integration_test.rs
(+925 files in other folders)
