[package]
name = "armature-angular"
version = "0.1.0"
edition = "2024"
description = "Angular SSR integration for Armature framework"

[dependencies]
armature-core = { path = "../armature-core" }
tokio = { version = "1.35", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
mime_guess = "2.0"
percent-encoding = "2.3"

[dev-dependencies]
tokio-test = "0.4"

