[package]
name = "armature-audit"
version = "0.1.0"
edition = "2024"
description = "Audit logging and compliance for Armature"
license = "MIT OR Apache-2.0"
repository = "https://github.com/armature-rs/armature"

[dependencies]
armature-core = { path = "../armature-core" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.10"
tracing = "0.1"
once_cell = "1.19"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

