[package]
name = "armature-cache"
version = "0.1.0"
edition = "2024"
authors = ["Armature Contributors"]
description = "Cache management for Armature framework"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Redis support (optional)
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }

# Memcached support (optional) - TLS disabled to avoid openssl dependency
# For TLS support, users can enable "memcached-tls" feature
memcache = { version = "0.19", optional = true, default-features = false }

[features]
default = ["redis", "memcached"]
redis = ["dep:redis"]
memcached = ["dep:memcache"]
memcached-tls = ["memcache/tls"]  # Requires openssl

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

