[package]
name = "armature-config"
version = "0.1.0"
edition = "2024"
description = "Configuration management for Armature framework"

[dependencies]
armature-core = { path = "../armature-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dotenvy = "0.15"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

