[package]
name = "armature-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4"] }
thiserror = "1.0"
tokio-tungstenite = "0.21"
futures-util = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"

