[package]
name = "armature-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
httpdate = "1.0"
async-trait = "0.1"
flate2 = "1.0"
brotli = "6.0"
uuid = { version = "1.11", features = ["v4"] }
thiserror = "1.0"
tokio-tungstenite = "0.28"
futures-util = "0.3"
tokio-stream = "0.1"

# Hot Module Reload (HMR)
notify = "6.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# TLS/HTTPS support
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rcgen = { version = "0.12", optional = true }

[features]
default = []
self-signed-certs = ["rcgen"]

[dev-dependencies]
tokio-test = "0.4"

