[package]
name = "armature-cqrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CQRS pattern implementation for Armature applications"
keywords = ["cqrs", "command", "query", "event-sourcing"]
categories = ["web-programming", "data-structures"]

[dependencies]
armature-events = { path = "../armature-events", version = "0.1.0" }
armature-eventsourcing = { path = "../armature-eventsourcing", version = "0.1.0" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"

