[package]
name = "armature-cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Scheduled task execution for Armature applications"
keywords = ["cron", "scheduler", "tasks", "background"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Logging
armature-log = { path = "../armature-log" }

# Core dependencies
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
cron = "0.15"

# DI integration
armature-core = { path = "../armature-core" }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

