[package]
name = "armature-csrf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
armature-core = { path = "../armature-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP
http = "0.2"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio-test = "0.4"

