[package]
name = "armature-diesel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Diesel async database integration for the Armature framework"
keywords = ["diesel", "database", "async", "postgres", "mysql", "armature"]
categories = ["database", "web-programming", "asynchronous"]

[features]
default = ["postgres", "deadpool"]
# Database backends
postgres = ["diesel/postgres", "diesel-async/postgres"]
mysql = ["diesel/mysql", "diesel-async/mysql"]
# Connection pools
deadpool = ["diesel-async/deadpool"]
bb8 = ["diesel-async/bb8"]
mobc = ["diesel-async/mobc"]
# Extras
r2d2 = ["diesel/r2d2"]
migrations = ["diesel_migrations"]
tracing = ["dep:tracing"]

[dependencies]
# Diesel
diesel = { version = "2.2", default-features = false }
diesel-async = { version = "0.5", default-features = false }
diesel_migrations = { version = "2.2", optional = true }

# Async
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
armature-log = { path = "../armature-log" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

