[package]
name = "armature-discovery"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Service discovery for Armature microservices"
keywords = ["discovery", "microservices", "consul", "etcd"]
categories = ["web-programming", "network-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
tracing = "0.1"
url = "2.5"
base64 = "0.22"
rand = "0.9"

# Optional Consul support
consul = { version = "0.4", optional = true }

[features]
default = []
consul-client = ["consul"]

[dev-dependencies]
tokio-test = "0.4"

